--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    font-family: 'Syne', sans-serif;
 }
 body {
     background: #6f2a34;
@@ -8,7 +9,12 @@ body {
     border-radius: 30px;
     background: #6f2a34;
     box-shadow:  -26px -26px 51px #501e25, 26px 26px 51px #8e3643;
-    width: 50vw;
+    width: 45vw;
+    transition: 1.5s ease-in-out;
+}
+.welcome-container:hover{
+    box-shadow:  -26px -26px 51px #3c171c,26px 26px 51px #a23d4c;
+    width: 30vw;
 }
 .start-game {
     font-family: 'Monoton', cursive;
